refactor: separate benchmark Dockerfile for simplicity
- Remove complex if/else logic from main Dockerfile
- Create dedicated Dockerfile.benchmark (11 lines, super simple)
- Restore main Dockerfile to original simplicity (18 lines)
- Use runtime image for benchmarks (smaller, faster)
- Each Dockerfile has single responsibility

Benefits:
- No conditional logic complexity
- Easier to maintain and understand
- Optimized images for each use case
- Clear separation of concerns

--- a/.github/workflows/regression-test-ephemeral-env.yaml
+++ b/.github/workflows/regression-test-ephemeral-env.yaml
@@ -219,10 +219,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile
-          build-args: |
-            servicename=BenchmarkRunner
-            ENABLE_EPHEMERAL_CONFIG=true
+          file: Dockerfile.benchmark
           push: true
           platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
