fix: allow out/ directory in Docker build context for artifacts
- Remove '**/out/' from .dockerignore to fix build failures
- GitHub Actions downloads artifacts to out/ directory
- Docker build needs access to out/ for COPY commands
- Previous .dockerignore blocked all out/ directories causing:
  'failed to calculate checksum of ref: "/out/ServiceName": not found'

Fixes build-and-push-image jobs for all services
Error: buildx failed with artifacts not found in build context

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,9 @@
 # Build outputs
 **/bin/
 **/obj/
-**/out/
 **/dist/
+
+# Note: out/ is needed for GitHub Actions artifacts, so not excluded
 
 # IDE files
 **/.vs/
