fix: correct Kubernetes namespace generation for benchmark jobs
- Fix namespace to follow ephemeral-test-env naming convention
- Change from PROJECT_NAME to PROJECT_NAME-ephemeral-test-1 format
- Ensure consistency with actual deployed namespace structure
- Apply to both broadcast and latency benchmark jobs

BEFORE: NS="$PROJECT_NAME"                    # env-7586b66d
AFTER:  NS="${PROJECT_NAME_NO_SPACES}-ephemeral-test-1"  # env-7586b66d-ephemeral-test-1

This matches the namespace format used in ephemeral-test-env-update.yaml
and ensures benchmark jobs can find the correct Kubernetes resources.

--- a/.github/workflows/regression-test-ephemeral-env.yaml
+++ b/.github/workflows/regression-test-ephemeral-env.yaml
@@ -466,7 +466,9 @@ jobs:
           set -e
           echo "🚀 Creating benchmark job in ephemeral Kubernetes environment..."
           
-          NS="$PROJECT_NAME"
+          # Generate proper namespace following ephemeral-test-env naming convention
+          PROJECT_NAME_NO_SPACES="${PROJECT_NAME// /}"
+          NS="${PROJECT_NAME_NO_SPACES}-ephemeral-test-1"
           JOB_NAME="benchmark-runner-$(date +%s)"
           
           echo "Namespace: $NS"
@@ -730,7 +732,9 @@ jobs:
           set -e
           echo "🚀 Creating latency benchmark job in ephemeral Kubernetes environment..."
           
-          NS="$PROJECT_NAME"
+          # Generate proper namespace following ephemeral-test-env naming convention
+          PROJECT_NAME_NO_SPACES="${PROJECT_NAME// /}"
+          NS="${PROJECT_NAME_NO_SPACES}-ephemeral-test-1"
           JOB_NAME="latency-benchmark-$(date +%s)"
           
           echo "Namespace: $NS"
