--- a/Dockerfile.benchmark
+++ b/Dockerfile.benchmark
@@ -8,6 +8,9 @@ WORKDIR /app
 # Copy pre-built benchmark artifacts
 COPY out/BenchmarkRunner/ .
 
+# Debug: List all files to understand structure
+RUN ls -la /app/
+
 # Make runner script executable
 RUN chmod +x unified-benchmark-runner.sh
 
