fix: resolve benchmark image build failure by correcting artifact paths
ROOT CAUSE ANALYSIS:
Path mismatch between artifact upload/download created unnecessary nesting:
1. publish-benchmarks: upload path: out/ (uploads out/ contents)
2. build-unified-benchmark-image: download path: out/BenchmarkRunner (creates nesting)
3. Dockerfile.benchmark: COPY out/BenchmarkRunner/ . (expects nested structure)
4. Result: chmod +x unified-benchmark-runner.sh failed (file not found)

PRECISE FIX:
1. Change download path from 'out/BenchmarkRunner' to 'out/' (eliminate nesting)
2. Change Dockerfile COPY from 'out/BenchmarkRunner/ .' to 'out/ .' (match structure)
3. Remove debug output (no longer needed)

FINAL STRUCTURE:
- Artifact contains: BroadcastLatencyBenchmark/, LatencyBenchmark/, unified-benchmark-runner.sh
- Download to: out/BroadcastLatencyBenchmark/, out/LatencyBenchmark/, out/unified-benchmark-runner.sh
- Docker COPY: /app/BroadcastLatencyBenchmark/, /app/LatencyBenchmark/, /app/unified-benchmark-runner.sh
- chmod target: /app/unified-benchmark-runner.sh ✅

This eliminates the path mismatch that caused BENCHMARK_IMAGE to be empty.

--- a/Dockerfile.benchmark
+++ b/Dockerfile.benchmark
@@ -5,11 +5,8 @@ RUN apk add --no-cache jq curl bash bc
 
 WORKDIR /app
 
-# Copy pre-built benchmark artifacts
-COPY out/BenchmarkRunner/ .
-
-# Debug: List all files to understand structure
-RUN ls -la /app/
+# Copy pre-built benchmark artifacts  
+COPY out/ .
 
 # Make runner script executable
 RUN chmod +x unified-benchmark-runner.sh
