--- a/.github/workflows/regression-test-ephemeral-env.yaml
+++ b/.github/workflows/regression-test-ephemeral-env.yaml
@@ -210,7 +210,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: BenchmarkRunner
-          path: out/BenchmarkRunner
+          path: out/
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
