debug: add metadata outputs debug info to diagnose BENCHMARK_IMAGE empty issue
Adding debug step to print all docker/metadata-action outputs:
- steps.meta.outputs.tags
- steps.meta.outputs.labels
- steps.meta.outputs.digest
- steps.meta.outputs.imageid

This will help identify why BENCHMARK_IMAGE environment variable is empty
even though Docker build and push succeeded with proper image tags.

Expected outputs:
- tags should contain: ***-docker.pkg.dev/***/***/benchmark-unified:sha-240958f
- This gets passed to run-broadcast-benchmark as BENCHMARK_IMAGE

Will remove debug output once root cause is identified.

--- a/.github/workflows/regression-test-ephemeral-env.yaml
+++ b/.github/workflows/regression-test-ephemeral-env.yaml
@@ -205,6 +205,15 @@ jobs:
           images: ${{ secrets.REPOSITORY_REGION }}-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ secrets.REPOSITORY }}/benchmark-unified
           tags: |
             type=sha
+      
+      - name: Debug metadata outputs
+        run: |
+          echo "=== Metadata Debug Info ==="
+          echo "tags: ${{ steps.meta.outputs.tags }}"
+          echo "labels: ${{ steps.meta.outputs.labels }}"
+          echo "digest: ${{ steps.meta.outputs.digest }}"
+          echo "imageid: ${{ steps.meta.outputs.imageid }}"
+          echo "=========================="
 
       - name: Download benchmark artifacts
         uses: actions/download-artifact@v4
