fix: use aspnet base image to include ASP.NET Core runtime for benchmarks
- Change base image from dotnet/runtime:9.0-alpine to dotnet/aspnet:9.0-alpine
- Fixes missing 'Microsoft.AspNetCore.App' framework error in benchmark execution
- The benchmark applications have indirect dependencies on ASP.NET Core through Orleans and other packages
- aspnet image provides the necessary runtime while keeping size reasonable compared to sdk image

Resolves error:
Framework: 'Microsoft.AspNetCore.App', version '9.0.0' (x64)
No frameworks were found.

--- a/Dockerfile.benchmark
+++ b/Dockerfile.benchmark
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/runtime:9.0-alpine
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine
 
 # Install required tools for benchmark results processing
 RUN apk add --no-cache jq curl bash bc
