--- a/src/Aevatar.Sandbox.HttpApi.Host/appsettings.json
+++ b/src/Aevatar.Sandbox.HttpApi.Host/appsettings.json
@@ -19,27 +19,18 @@
     "MongoDBClient": "mongodb://localhost:27017/?maxPoolSize=555",
     "AdoNetConnectionString": "mongodb://localhost:27017/?maxPoolSize=555"
   },
-  "Kubernetes": {
-    "InCluster": false,
-    "KubeConfig": "~/.kube/config",
-    "Namespace": "sandbox"
+  "StringEncryption": {
+    "DefaultPassPhrase": "gsKnGZ041HLL4IM8"
   },
-  "Sandbox": {
-    "Python": {
-      "Image": "aevatar/python-sandbox:3.11",
-      "DefaultTimeout": 30,
-      "MaxCodeLength": 1000000,
-      "Resources": {
-        "CpuLimit": "100m",
-        "MemoryLimit": "256Mi",
-        "DiskLimit": "1Gi"
-      },
-      "AllowedModules": [
-        "numpy",
-        "pandas",
-        "scipy",
-        "sklearn"
-      ]
-    }
+  "Settings": {
+    "Abp.Mailing.Smtp.Host": "127.0.0.1",
+    "Abp.Mailing.Smtp.Port": "25",
+    "Abp.Mailing.Smtp.UserName": "",
+    "Abp.Mailing.Smtp.Password": "",
+    "Abp.Mailing.Smtp.Domain": "",
+    "Abp.Mailing.Smtp.EnableSsl": "false",
+    "Abp.Mailing.Smtp.UseDefaultCredentials": "true",
+    "Abp.Mailing.DefaultFromAddress": "noreply@abp.io",
+    "Abp.Mailing.DefaultFromDisplayName": "ABP application"
   }
 }
