--- a/station/src/Aevatar.Sandbox.Core/Aevatar.Sandbox.Core.csproj
+++ b/station/src/Aevatar.Sandbox.Core/Aevatar.Sandbox.Core.csproj
@@ -1,22 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
+
+    <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>$(DefaultTargetFramework)</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <TargetFramework>net9.0</TargetFramework>
+        <RootNamespace>Aevatar.Sandbox.Core</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Orleans.Core" />
-        <PackageReference Include="Microsoft.Orleans.Streaming" />
-        <PackageReference Include="Orleans.Streams.Kafka" />
-        <PackageReference Include="Volo.Abp.Core" />
+        <ProjectReference Include="..\Aevatar.Sandbox.Abstractions\Aevatar.Sandbox.Abstractions.csproj" />
+        <ProjectReference Include="..\Aevatar.Kubernetes\Aevatar.Kubernetes.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Aevatar.Sandbox.Abstractions\Aevatar.Sandbox.Abstractions.csproj" />
-        <ProjectReference Include="..\Aevatar.Sandbox.Kubernetes\Aevatar.Sandbox.Kubernetes.csproj" />
-        <ProjectReference Include="..\Aevatar.Sandbox.Python\Aevatar.Sandbox.Python.csproj" />
+        <PackageReference Include="Microsoft.Orleans.Core.Abstractions" />
+        <PackageReference Include="Microsoft.Orleans.Sdk" />
+        <PackageReference Include="Microsoft.Orleans.Streaming" />
     </ItemGroup>
 
 </Project>
